[package]
name = "image-dedup"
version = "0.1.0"
authors = ["Kisrákói Gyula <krakoi90@gmail.com>"]
license = "MIT"

[lib]
name = "image_dedup"
path = "src/lib.rs"

[[bin]]
name = "image-dedup"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
clap = "2.33"
log = "0.4"
stderrlog = "0.4"
globset = "0.4"
walkdir = "2"
image = "0.22.3"
img_hash = "3.0"
rayon = "1.2.1"
